[gd_scene load_steps=4 format=3 uid="uid://4yly08iku4qj"]

[ext_resource type="Script" path="res://Scripts/Naves/utilidades de naves/disparos.gd" id="1_nl6es"]
[ext_resource type="PackedScene" uid="uid://bf6o6qy8hmn3y" path="res://Escenas/ESCENAS NODOS/bala.tscn" id="2_71l8r"]
[ext_resource type="Script" path="res://Scripts/Naves/utilidades de naves/BalaHumana.gd" id="3_3t7wn"]

[node name="disparos" type="Node2D"]
script = ExtResource("1_nl6es")

[node name="Bala7" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(-88, -58)
script = ExtResource("3_3t7wn")

[node name="Bala8" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(-59, -58)
script = ExtResource("3_3t7wn")

[node name="Bala9" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(-31, -58)
script = ExtResource("3_3t7wn")

[node name="Bala10" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(33, -58)
script = ExtResource("3_3t7wn")

[node name="Bala11" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(61, -58)
script = ExtResource("3_3t7wn")

[node name="Bala12" parent="." instance=ExtResource("2_71l8r")]
position = Vector2(90, -57)
script = ExtResource("3_3t7wn")

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="Timer2" to="." method="_on_timer_timeout"]
